objects/MaintenanceLinkOrderForm__c.object
<CustomObject>
    <fields>
        <fullName>LinkageStatus__c</fullName>
        <label>連携ステータス</label>
        <picklist>
            <picklistValues>
                <fullName>未連携</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>連携済</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MaintenanceLinkOrder__c</fullName>
        <label>MaintenanceLinkOrder</label>
        <referenceTo>MaintenanceLinkOrder__c</referenceTo>
        <relationshipLabel>MaintenanceLinkOrderForm</relationshipLabel>
        <relationshipName>MaintenanceLinkOrderForm</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>bgyr__c</fullName>
        <description>予算年度</description>
        <label>bgyr</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ctdt__c</fullName>
        <description>契約年月日</description>
        <label>ctdt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dtnm__c</fullName>
        <description>据置日</description>
        <label>dtnm</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fpdt__c</fullName>
        <description>支払日定時</description>
        <label>fpdt</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ftys__c</fullName>
        <description>ファクタリング有無</description>
        <label>ftys</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gndt__c</fullName>
        <description>取込日時</description>
        <label>gndt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ifdt__c</fullName>
        <description>連携日時</description>
        <label>ifdt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ifst__c</fullName>
        <description>連携状況</description>
        <label>ifst</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kflg__c</fullName>
        <description>契約書</description>
        <label>kflg</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mess__c</fullName>
        <description>エラーメッセージ</description>
        <label>mess</label>
        <length>132</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ornb__c</fullName>
        <description>注文番号</description>
        <label>ornb</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pric__c</fullName>
        <description>契約金額</description>
        <label>pric</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>prts__c</fullName>
        <description>立会検査</description>
        <label>prts</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptkb__c</fullName>
        <description>ペナルティ有無</description>
        <label>ptkb</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptrt__c</fullName>
        <description>ペナルティ率</description>
        <label>ptrt</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pydt__c</fullName>
        <description>支払日区分</description>
        <label>pydt</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pykb__c</fullName>
        <description>現金手形区分</description>
        <label>pykb</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__c</fullName>
        <description>支払条件</description>
        <label>pymt</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pytm__c</fullName>
        <description>支払回数</description>
        <label>pytm</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pytp__c</fullName>
        <description>支払一括区分</description>
        <label>pytp</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rcid__c</fullName>
        <formula>casesafeid(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>rcid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfno__c</fullName>
        <description>SFDC販売オーダ番号</description>
        <label>sfno</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>site__c</fullName>
        <description>サイト/DAYS</description>
        <label>site</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sqno__c</fullName>
        <description>連番</description>
        <label>sqno</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tddt__c</fullName>
        <description>検収締日</description>
        <label>tddt</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdkb__c</fullName>
        <description>検収締切区分</description>
        <label>tdkb</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>MaintenanceLinkOrderForm</label>
    <nameField>
        <label>MaintenanceLinkOrderForm名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>